image-collage/v3/index.css
/*Variables*/
:root {
  --primary: #0065ff;
  --secondary: #609fff;
  --background: #fff;
  --foreground: #000;
  --accent: lightgray;
}

.darked:root {
  --primary: #00e4ff;
  --secondary: #00abbf;
  --background: #000;
  --foreground: #fff;
  --accent: gray;
}

html {
	font-family: Open Sans;
	background-color: var(--background);
	color: var(--foreground);
	height: 100%;
}

body {
	margin: 0;
	overflow: hidden;
	height: 100%;
}

body[layout='horizontal'] .content {
	display: flex;
}

.content {
	height: 100%;
	
}
body[layout='horizontal'] .expander {
	display: none;
}

.title {
	cursor: pointer;
}

.description {
	max-height: 5em;
	height: 100%;
	overflow: auto;
}

.tags div {
	-ms-overflow-style: none;
	scrollbar-width: none;
	width: 100%;
	max-height: 2em;
	overflow-x: auto;
	text-align: center;
}

.tags div::-webkit-scrollbar { 
	height: 0;
}

.tags .category-title {
	display: inline;
}

.tags.expanded {
	position: relative;
	max-height: calc(100% - 240px);	
}

.tags.expanded .category-title {
	display: block;
    flex-basis: 100%;
	margin: 0.5em;
}

.tags.expanded div {
	display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
	max-height: 100%;
	overflow-y: auto;
}

.tag {
	margin: 3px;
	cursor: pointer;
	background-color: var(--background);
	border: 1px solid var(--foreground);
	color: var(--foreground);
}

.tag:focus-visible {
	background-color: var(--accent);	
}

.tag[filter="include"] {
	background-color: var(--foreground);
	color: var(--background);
}

.tag[filter="include"]::before {
	content: "+ ";
}

.tag[filter="exclude"] {
	background-color: var(--foreground);
	color: var(--background);
}

.tag[filter="exclude"]::before {
	content: " - ";
}

.grid {
	width: 100%;
	display: flex;
    flex-wrap: wrap;
}

.grid-item {
	position: relative;
	border: 1px solid var(--background);
	cursor: pointer;
	overflow: hidden;
	box-sizing: border-box;
}

.grid-item img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	transition: all 0.1s ease;	
	image-rendering: crisp-edges;
	image-rendering: -moz-crisp-edges;          /* Firefox */
	image-rendering: -o-crisp-edges;            /* Opera */
	image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming)*/
	-ms-interpolation-mode: nearest-neighbor;   /* IE (non-standard property) */
}

.grid-item img:hover {
  transform: scale(1.2);
}

.banner {
  position: absolute;
  left: 0;
  top: 0;
  padding: 5px 8px;
  font-size: 12px;
  color: var(--foreground);
  background: var(--background);
  border: 1px solid var(--background);
  border-left: 0;
  border-top: 0;
  z-index: 2;
}

.button-active {
	color: var(--accent);
	border: 1px solid var(--accent);
}

.button-inactive {
	color: var(--accent);
	border: 1px solid var(--accent);
}

.loader {
	display: flex;
	justify-content: center;
	padding: 10px;
	font-size: 24px;
	position: absolute;
	width: 100%;
	margin: auto;
	z-index: 11;
}

.back {
	display: block;
	font-size: 0.9em;
}

.table {
	display: flex;
	width: 100%;
}
.counter {
	padding: 0 5px;
	text-align: left;
	vertical-align: top;
	display: inline-block;
	width: 40px;
	font-size: 0.9em;
}

.settings a {
	color: var(--foreground);
	text-decoration: none;
	padding: 0 5px;	
}

.filters {
    display: flex;
    justify-content: center
}

.filter {
	border: 1px solid var(--foreground);
	margin: 2px;
	width: 40%;
	max-width: 45%;
	font-size: 1em;
}

.menu {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	max-height: 100%;
}

body[layout='vertical'] .menu {
	max-height: 330px;
}

.title,
.description {
	margin: 10px 0;
}

.collage {
  overflow: auto;
  white-space: nowrap;
}

.dialog dialog {
	border: 1px solid var(--foreground);
	background-color: var(--background);
	color: var(--foreground);	
	padding: 10px;
	max-width: 80%;
	max-height: 80%;
	font-size: 0.8em;
}

.dialog dialog a {
	background-color: var(--background);
	color: var(--primary);
}

.hidden {
	display: none;
}

.viewer {
	z-index: 9;
	position: fixed;
	background-color: var(--background);
	width: 100%;
	height: 100%;
	padding-top: 0;
	text-align: center;
	transition: opacity 0.3s, visibility 0.3s;
	top: 0;
	visibility: hidden;
	opacity: 0;
}

.viewer.open {
	visibility: visible;
	opacity: 1;	
}

.viewer .prev {
	cursor: pointer;
	background-color: transparent;
	position: absolute;
	left: 0;
	top: 0;
	width: 25%;
	height: 100%;
	z-index: 11;
}

.viewer .next {
	cursor: pointer;
	background-color: transparent;
	position: absolute;
	right: 0;
	top: 0;
	width: 25%;
	height: 100%;
	z-index: 11;
}

.viewer .prev:active {
	opacity: 0.5;
	background-image: linear-gradient(to left, transparent, var(--background));
}

.viewer .next:active {
	opacity: 0.5;
	background-image: linear-gradient(to right, transparent, var(--background));
}

.viewer img {
	transition: transform 0.2s;
	object-fit: contain;
	width: 100%;
	height: 100%;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.viewer.zoom img {
	object-fit: cover;	
}

